--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: brew pr-pull
+name: "brew pr-pull"
 on:
   pull_request_target:
     types:
@@ -8,28 +8,28 @@ jobs:
     if: contains(github.event.pull_request.labels.*.name, 'pr-pull')
     runs-on: ubuntu-22.04
     steps:
-      - name: Set up Homebrew
+      - name: "Set up Homebrew"
         uses: Homebrew/actions/setup-homebrew@master
 
-      - name: Set up git
+      - name: "Set up git"
         uses: Homebrew/actions/git-user-config@master
 
-      - name: Pull bottles
+      - name: "Pull bottles"
         env:
           HOMEBREW_GITHUB_API_TOKEN: ${{ github.token }}
           HOMEBREW_GITHUB_PACKAGES_TOKEN: ${{ github.token }}
           HOMEBREW_GITHUB_PACKAGES_USER: ${{ github.actor }}
           PULL_REQUEST: ${{ github.event.pull_request.number }}
-        run: brew pr-pull --debug --tap=$GITHUB_REPOSITORY $PULL_REQUEST
+        run: "brew pr-pull --debug --tap=$GITHUB_REPOSITORY $PULL_REQUEST"
 
-      - name: Push commits
+      - name: "Push commits"
         uses: Homebrew/actions/git-try-push@master
         with:
           token: ${{ github.token }}
           branch: main
 
-      - name: Delete branch
+      - name: "Delete branch"
         if: github.event.pull_request.head.repo.fork == false
         env:
           BRANCH: ${{ github.event.pull_request.head.ref }}
-        run: git push --delete origin $BRANCH
+        run: "git push --delete origin $BRANCH"
